--- a/env.example
+++ b/env.example
@@ -16,3 +16,13 @@ RABBITMQ_PASS=guest
 
 # API Service Configuration
 API_PORT=8080
+
+# GEOFENCE
+GEOFENCE_LAT=-6.2526
+GEOFENCE_LON= 106.8736
+GEOFENCE_RADIUS=50.0
+
+# Mock Data
+VEHICLE_ID=B5678ABC
+INITIAL_LAT=-6.2520
+INITIAL_LON=106.8730
