--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: vehicle_db
       API_PORT: 8080
+      GIN_MODE: release
       GEOFENCE_LAT: -6.2526
       GEOFENCE_LON: 106.8736
       GEOFENCE_RADIUS: 50.0
